--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "seti-icons",
-  "version": "0.0.4",
+  "name": "@peoplesgrocers/seti-icons",
+  "version": "0.0.5",
   "description": "File icons from Seti-UI",
   "main": "lib/index.js",
   "scripts": {
-    "test": "jest --config jestconfig.json --passWithNoTests",
-    "extract": "node build/extract.js",
-    "build:scripts": "tsc build/extract.ts --esModuleInterop",
+    "test": "tsx node_modules/uvu/bin.js src/__tests__",
+    "extract": "tsx build/extract.ts",
     "build": "tsc",
     "lint": "tsc --noEmit && eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
@@ -23,32 +22,28 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/elviswolcott/seti-icons.git"
+    "url": "git+https://github.com/peoplesgrocers/seti-ui-file-icons.git"
   },
   "keywords": [],
-  "author": "Elvis Wolcott",
+  "author": "Karl Marx",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/elviswolcoott/seti-icons.git"
+    "url": "https://github.com/peoplesgrocers/seti-icons.git"
   },
-  "homepage": "https://github.com/elviswolcott/set-icons#readme",
+  "homepage": "https://github.com/peoplesgrocers/set-icons#readme",
   "devDependencies": {
-    "@types/jest": "^25.1.0",
-    "@types/node": "^13.13.4",
+    "@types/node": "^20.19.11",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.0.10",
-    "jest": "^25.1.0",
     "lint-staged": "^10.0.9",
     "prettier": "^2.0.2",
-    "ts-jest": "^25.4.0",
-    "typescript": "^3.7.5"
-  },
-  "dependencies": {
-    "@types/svgo": "^1.3.2",
-    "svgo": "^1.3.2"
+    "svgo": "^4.0.0",
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2",
+    "uvu": "^0.5.6"
   }
 }
