--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@peoplesgrocers/seti-icons",
+  "name": "@peoplesgrocers/seti-ui-file-icons",
   "version": "1.11.0",
   "description": "File icons from Seti-UI",
   "main": "lib/index.js",
@@ -28,9 +28,9 @@
   "author": "Karl Marx",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/peoplesgrocers/seti-icons.git"
+    "url": "https://github.com/peoplesgrocers/seti-ui-file-icons.git"
   },
-  "homepage": "https://github.com/peoplesgrocers/set-icons#readme",
+  "homepage": "https://github.com/peoplesgrocers/seti-ui-file-icons#readme",
   "devDependencies": {
     "@types/node": "^20.19.11",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
@@ -41,7 +41,7 @@
     "husky": "^4.0.10",
     "lint-staged": "^10.0.9",
     "prettier": "^2.0.2",
-    "svgo": "^4.0.0",
+    "svgo": "1.3.2",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "uvu": "^0.5.6"
